--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="Taing Menghai" />
-
+		<!-- og image -->
+		<meta
+			property="og:image"
+			content="https://cdn.pixabay.com/photo/2017/10/25/16/54/african-lion-2888519__340.jpg"
+		/>
 		<title>Taing Menghai</title>
 	</head>
 	<body>
