--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="Taing Menghai" />
-		<!-- og image -->
+		<meta property="og:title" content="Taing Menghai" />
 		<meta
-			property="og:image"
-			content="https://cdn.pixabay.com/photo/2017/10/25/16/54/african-lion-2888519__340.jpg"
+			name="description"
+			content="Taing Menghai, a developer who loves technology. He is always curious about how things work and how he can improve his skills and knowledge. He believes that technology is a powerful way to solve problems and make a positive impact on the world."
 		/>
+		<meta property="og:url" content="https://card-portfolio.vercel.app" />
+		<meta property="og:image" content="https://i.ibb.co/9vWJ5NV/me-sm.png" />
+		<meta property="og:site_name" content="Taing Menghai" />
+
+		<!-- Twitter -->
+		<meta name="twitter:title" content="Taing Mnenghai" />
+		<meta
+			name="twitter:description"
+			content="Taing Menghai, a developer who loves technology. He is always curious about how things work and how he can improve his skills and knowledge. He believes that technology is a powerful way to solve problems and make a positive impact on the world."
+		/>
+		<meta name="twitter:image" content="https://i.ibb.co/9vWJ5NV/me-sm.png" />
+		<meta name="twitter:card" content="summary_large_image" />
 		<title>Taing Menghai</title>
 	</head>
 	<body>
